Created page with "[[Image:Workbench_Part.svg|24px]] [[Part_Workbench|Part Workbench]] nabízí základní nástroje pro práci s pevnými tělesy, včetně primitivních tvarů, jako jsou krychle a koule, stejně jako základní geometrické a booleovské operace. Jako primární propojení s [https://en.wikipedia.org/wiki/Open_Cascade_Technology OpenCasCade], tvoří Part Workbench základ geometrického systému FreeCADu, přičemž téměř všechny ostatní pracovní plochy generují..."

--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -76,10 +76,8 @@
 </p>
 <meta property="mw:PageProp/toc">
 <h3><span class="mw-headline" id="Part">Part</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> offers fundamental tools for working with solid parts, including primitives like cubes and spheres, as well as basic geometric and boolean operations. Serving as the primary link with <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Cascade_Technology">OpenCasCade</a>, the Part Workbench forms the cornerstone of FreeCAD's geometry system, with nearly all other workbenches generating Part-based geometry. This parametric modeling system enables precise control and modification of 3D models through a history-based workflow. Users can build and refine complex designs by stacking and adjusting simpler shapes and operations, ensuring a robust and flexible design process.
+<p><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> nab&iacute;z&iacute; z&aacute;kladn&iacute; n&aacute;stroje pro pr&aacute;ci s pevn&yacute;mi t&#283;lesy, v&#269;etn&#283; primitivn&iacute;ch tvar&#367;, jako jsou krychle a koule, stejn&#283; jako z&aacute;kladn&iacute; geometrick&eacute; a booleovsk&eacute; operace. Jako prim&aacute;rn&iacute; propojen&iacute; s <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Cascade_Technology">OpenCasCade</a>, tvo&#345;&iacute; Part Workbench z&aacute;klad geometrick&eacute;ho syst&eacute;mu FreeCADu, p&#345;i&#269;em&#382; t&eacute;m&#283;&#345; v&scaron;echny ostatn&iacute; pracovn&iacute; plochy generuj&iacute; geometrii zalo&#382;enou na sou&#269;&aacute;stech. Tento parametrick&yacute; modelovac&iacute; syst&eacute;m umo&#382;&#328;uje p&#345;esn&eacute; ovl&aacute;d&aacute;n&iacute; a &uacute;pravy 3D model&#367; prost&#345;ednictv&iacute;m pracovn&iacute;ho postupu zalo&#382;en&eacute;ho na historii. U&#382;ivatel&eacute; mohou vytv&aacute;&#345;et a vylep&scaron;ovat slo&#382;it&eacute; n&aacute;vrhy skl&aacute;d&aacute;n&iacute;m a &uacute;pravami jednodu&scaron;&scaron;&iacute;ch tvar&#367; a operac&iacute;, co&#382; zaji&scaron;&#357;uje robustn&iacute; a flexibiln&iacute; proces n&aacute;vrhu.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable" style="width:100%">
 <tbody><tr>
@@ -1318,13 +1316,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112060203
+Cached time: 20260112060309
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.465 seconds
-Real time usage: 0.554 seconds
-Preprocessor visited node count: 639/1000000
+CPU time usage: 0.506 seconds
+Real time usage: 0.723 seconds
+Preprocessor visited node count: 638/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1334,13 +1332,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.130      1 -total
- 64.62%    5.254      1 Template:Manual:TOC
- 49.89%    4.056      1 Manual:Summary/cs
- 28.15%    2.289      2 Template:Docnav
+100.00%   14.462      1 -total
+ 72.98%   10.554      1 Template:Manual:TOC
+ 48.69%    7.041      1 Manual:Summary/cs
+ 22.21%    3.212      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060203 and revision id 1737221. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060309 and revision id 1737223. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
