Created page with "{| class="wikitable" style="width:100%" ! Nástroj ! Popis ! Nástroj ! Popis |- | [[Image:Part_Box.svg|32px]] [[Part_Box|Krychle]] | Vytvoří kvádr | [[Image:Part_Cylinder.svg|32px]] [[Part_Cylinder|Válec]] | Vytvoří válec |- | [[Image:Part_Sphere.svg|32px]] [[Part_Sphere|Koule]] | Vytvoří kouli | [[Image:Part_Cone.svg|32px]] [[Part_Cone|Kužel]] | Vytvoří kužel |- | [[Image:Part_Torus.svg|32px]] [[Part_Torus|Toroid]] | Vytvoří toroid (prstenec) | Image:P..."

--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -78,52 +78,51 @@
 <h3><span class="mw-headline" id="Part">Part</span></h3>
 <p><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> nab&iacute;z&iacute; z&aacute;kladn&iacute; n&aacute;stroje pro pr&aacute;ci s pevn&yacute;mi t&#283;lesy, v&#269;etn&#283; primitivn&iacute;ch tvar&#367;, jako jsou krychle a koule, stejn&#283; jako z&aacute;kladn&iacute; geometrick&eacute; a booleovsk&eacute; operace. Jako prim&aacute;rn&iacute; propojen&iacute; s <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Cascade_Technology">OpenCasCade</a>, tvo&#345;&iacute; Part Workbench z&aacute;klad geometrick&eacute;ho syst&eacute;mu FreeCADu, p&#345;i&#269;em&#382; t&eacute;m&#283;&#345; v&scaron;echny ostatn&iacute; pracovn&iacute; plochy generuj&iacute; geometrii zalo&#382;enou na sou&#269;&aacute;stech. Tento parametrick&yacute; modelovac&iacute; syst&eacute;m umo&#382;&#328;uje p&#345;esn&eacute; ovl&aacute;d&aacute;n&iacute; a &uacute;pravy 3D model&#367; prost&#345;ednictv&iacute;m pracovn&iacute;ho postupu zalo&#382;en&eacute;ho na historii. U&#382;ivatel&eacute; mohou vytv&aacute;&#345;et a vylep&scaron;ovat slo&#382;it&eacute; n&aacute;vrhy skl&aacute;d&aacute;n&iacute;m a &uacute;pravami jednodu&scaron;&scaron;&iacute;ch tvar&#367; a operac&iacute;, co&#382; zaji&scaron;&#357;uje robustn&iacute; a flexibiln&iacute; proces n&aacute;vrhu.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable" style="width:100%">
 <tbody><tr>
-<th>Tool
+<th>N&aacute;stroj
 </th>
-<th>Description
+<th>Popis
 </th>
-<th>Tool
+<th>N&aacute;stroj
 </th>
-<th>Description
+<th>Popis
 </th></tr>
 <tr>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Box.svg&amp;filetimestamp=20240710103459&amp;.html" class="mw-file-description"><img src="../File/Part_Box.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Box.html" title="Part Box">Box</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Box.svg&amp;filetimestamp=20240710103459&amp;.html" class="mw-file-description"><img src="../File/Part_Box.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Box.html" title="Part Box">Krychle</a>
 </td>
-<td>Creates a box
+<td>Vytvo&#345;&iacute; kv&aacute;dr
 </td>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Cylinder.svg&amp;filetimestamp=20240712190137&amp;.html" class="mw-file-description"><img src="../File/Part_Cylinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Cylinder.html" title="Part Cylinder">Cylinder</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Cylinder.svg&amp;filetimestamp=20240712190137&amp;.html" class="mw-file-description"><img src="../File/Part_Cylinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Cylinder.html" title="Part Cylinder">V&aacute;lec</a>
 </td>
-<td>Creates a cylinder
+<td>Vytvo&#345;&iacute; v&aacute;lec
 </td></tr>
 <tr>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Sphere.svg&amp;filetimestamp=20240712190158&amp;.html" class="mw-file-description"><img src="../File/Part_Sphere.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Sphere.html" title="Part Sphere">Sphere</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Sphere.svg&amp;filetimestamp=20240712190158&amp;.html" class="mw-file-description"><img src="../File/Part_Sphere.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Sphere.html" title="Part Sphere">Koule</a>
 </td>
-<td>Creates a sphere
+<td>Vytvo&#345;&iacute; kouli
 </td>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Cone.svg&amp;filetimestamp=20240712190216&amp;.html" class="mw-file-description"><img src="../File/Part_Cone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Cone.html" title="Part Cone">Cone</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Cone.svg&amp;filetimestamp=20240712190216&amp;.html" class="mw-file-description"><img src="../File/Part_Cone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Cone.html" title="Part Cone">Ku&#382;el</a>
 </td>
-<td>Creates a cone
+<td>Vytvo&#345;&iacute; ku&#382;el
 </td></tr>
 <tr>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Torus.svg&amp;filetimestamp=20240712190237&amp;.html" class="mw-file-description"><img src="../File/Part_Torus.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Torus.html" title="Part Torus">Torus</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Torus.svg&amp;filetimestamp=20240712190237&amp;.html" class="mw-file-description"><img src="../File/Part_Torus.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Torus.html" title="Part Torus">Toroid</a>
 </td>
-<td>Creates a torus (ring)
+<td>Vytvo&#345;&iacute; toroid (prstenec)
 </td>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Tube.svg&amp;filetimestamp=20240712190302&amp;.html" class="mw-file-description"><img src="../File/Part_Tube.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Tube.html" title="Part Tube">Tube</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Tube.svg&amp;filetimestamp=20240712190302&amp;.html" class="mw-file-description"><img src="../File/Part_Tube.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Tube.html" title="Part Tube">V&aacute;lec</a>
 </td>
-<td>Creates a tube
+<td>Vytvo&#345;&iacute; v&aacute;lec
 </td></tr>
 <tr>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Primitives.svg&amp;filetimestamp=20240522201556&amp;.html" class="mw-file-description"><img src="../File/Part_Primitives.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Primitives.html" title="Part Primitives">Create primitives</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Primitives.svg&amp;filetimestamp=20240522201556&amp;.html" class="mw-file-description"><img src="../File/Part_Primitives.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Primitives.html" title="Part Primitives">Vytvo&#345;en&iacute; primitiva</a>
 </td>
-<td>Creates various other parametric geometric primitives
+<td>Vytv&aacute;&#345;&iacute; r&#367;zn&eacute; dal&scaron;&iacute; parametrick&eacute; geometrick&eacute; tvary
 </td>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Builder.svg&amp;filetimestamp=20240611075248&amp;.html" class="mw-file-description"><img src="../File/Part_Builder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Builder.html" title="Part Builder">Shape builder</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Builder.svg&amp;filetimestamp=20240611075248&amp;.html" class="mw-file-description"><img src="../File/Part_Builder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Builder.html" title="Part Builder">Tv&#367;rce tvar&#367;</a>
 </td>
-<td>Creates more complex shapes from primitives
+<td>Vytv&aacute;&#345;&iacute; slo&#382;it&#283;j&scaron;&iacute; tvary z primitiv
 </td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=Part_Extrude.svg&amp;filetimestamp=20240705092108&amp;.html" class="mw-file-description"><img src="../File/Part_Extrude.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Extrude.html" title="Part Extrude">Extrude</a>
@@ -269,7 +268,6 @@
 </td>
 <td>Removes features from a shape
 </td></tr></tbody></table>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Part_Design">Part Design</span></h3>
 </div>
@@ -1316,13 +1314,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112060309
+Cached time: 20260112061045
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.506 seconds
-Real time usage: 0.723 seconds
-Preprocessor visited node count: 638/1000000
+CPU time usage: 0.491 seconds
+Real time usage: 0.735 seconds
+Preprocessor visited node count: 637/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1332,13 +1330,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.462      1 -total
- 72.98%   10.554      1 Template:Manual:TOC
- 48.69%    7.041      1 Manual:Summary/cs
- 22.21%    3.212      2 Template:Docnav
+100.00%    9.222      1 -total
+ 73.49%    6.777      1 Template:Manual:TOC
+ 58.00%    5.349      1 Manual:Summary/cs
+ 20.12%    1.856      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060309 and revision id 1737223. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112061045 and revision id 1737225. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
