--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -125,31 +125,31 @@
 <td>Vytv&aacute;&#345;&iacute; slo&#382;it&#283;j&scaron;&iacute; tvary z primitiv
 </td></tr>
 <tr>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Extrude.svg&amp;filetimestamp=20240705092108&amp;.html" class="mw-file-description"><img src="../File/Part_Extrude.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Extrude.html" title="Part Extrude">Extrude</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Extrude.svg&amp;filetimestamp=20240705092108&amp;.html" class="mw-file-description"><img src="../File/Part_Extrude.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Extrude.html" title="Part Extrude">Vysunut&iacute;</a>
 </td>
-<td>Extrudes planar faces of an object
+<td>Vytla&#269;uje rovinn&eacute; plochy objektu
 </td>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Revolve.svg&amp;filetimestamp=20240712184727&amp;.html" class="mw-file-description"><img src="../File/Part_Revolve.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Revolve.html" title="Part Revolve">Revolve</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Revolve.svg&amp;filetimestamp=20240712184727&amp;.html" class="mw-file-description"><img src="../File/Part_Revolve.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Revolve.html" title="Part Revolve">Orotov&aacute;n&iacute;</a>
 </td>
-<td>Creates a solid by revolving another object (not solid) around an axis
+<td>Vytvo&#345;&iacute; t&#283;leso rotac&iacute; jin&eacute;ho objektu (kter&yacute; nen&iacute; t&#283;lesem) kolem osy
 </td></tr>
 <tr>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Mirror.svg&amp;filetimestamp=20240712184557&amp;.html" class="mw-file-description"><img src="../File/Part_Mirror.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Mirror.html" title="Part Mirror">Mirror</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Mirror.svg&amp;filetimestamp=20240712184557&amp;.html" class="mw-file-description"><img src="../File/Part_Mirror.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Mirror.html" title="Part Mirror">Zrcadlen&iacute;</a>
 </td>
-<td>Mirrors the selected object on a given mirror plane
+<td>Zrcadl&iacute; vybran&yacute; objekt na dan&eacute; zrcadlov&eacute; rovin&#283;
 </td>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Scale.svg&amp;filetimestamp=20240712184753&amp;.html" class="mw-file-description"><img src="../File/Part_Scale.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Scale.html" title="Part Scale">Scale</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Scale.svg&amp;filetimestamp=20240712184753&amp;.html" class="mw-file-description"><img src="../File/Part_Scale.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Scale.html" title="Part Scale">M&#283;&#345;&iacute;tko</a>
 </td>
-<td>Scales a selected shape
+<td>Zm&#283;n&iacute; m&#283;&#345;&iacute;tko vybran&eacute;ho tvaru
 </td></tr>
 <tr>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Fillet.svg&amp;filetimestamp=20240712184502&amp;.html" class="mw-file-description"><img src="../File/Part_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Fillet.html" title="Part Fillet">Fillet</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Fillet.svg&amp;filetimestamp=20240712184502&amp;.html" class="mw-file-description"><img src="../File/Part_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Fillet.html" title="Part Fillet">Zaoblen&iacute;</a>
 </td>
-<td>Fillets (rounds) edges of an object
+<td>Zaoblen&iacute; hran objektu
 </td>
-<td><span typeof="mw:File"><a href="../index.php?title=Part_Chamfer.svg&amp;filetimestamp=20240712184401&amp;.html" class="mw-file-description"><img src="../File/Part_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Chamfer.html" title="Part Chamfer">Chamfer</a>
+<td><span typeof="mw:File"><a href="../index.php?title=Part_Chamfer.svg&amp;filetimestamp=20240712184401&amp;.html" class="mw-file-description"><img src="../File/Part_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Chamfer.html" title="Part Chamfer">Zkosen&iacute;</a>
 </td>
-<td>Chamfers edges of an object
+<td>Zkosen&iacute; hran objektu
 </td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=Part_MakeFace.svg&amp;filetimestamp=20240710120955&amp;.html" class="mw-file-description"><img src="../File/Part_MakeFace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_MakeFace.html" title="Part MakeFace">MakeFace</a>
@@ -1314,12 +1314,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112061045
+Cached time: 20260112061847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.491 seconds
-Real time usage: 0.735 seconds
+CPU time usage: 0.440 seconds
+Real time usage: 0.602 seconds
 Preprocessor visited node count: 637/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
@@ -1330,13 +1330,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.222      1 -total
- 73.49%    6.777      1 Template:Manual:TOC
- 58.00%    5.349      1 Manual:Summary/cs
- 20.12%    1.856      2 Template:Docnav
+100.00%   10.582      1 -total
+ 54.33%    5.749      1 Template:Manual:TOC
+ 42.10%    4.455      1 Manual:Summary/cs
+ 41.32%    4.373      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112061045 and revision id 1737225. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112061847 and revision id 1737227. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
