--- a/wiki/Assembly.html
+++ b/wiki/Assembly.html
@@ -19,10 +19,10 @@
 <p>In general terms, you don't need special tools to create assemblies, you just need to have many different <a href="Body.html" title="Body">bodies</a> arranged in some way.
 </p><p>To position the bodies where you want them, you can
 </p>
-<ul><li>use the <a href="Std_TransformManip.html" title="Std TransformManip">Std TransformManip</a> tool,</li>
+<ul><li>use the <span typeof="mw:File"><a href="index.php?title=Std_TransformManip.svg&amp;filetimestamp=20240411193912&amp;.html" class="mw-file-description"><img src="File/Std_TransformManip.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_TransformManip.html" title="Std TransformManip">Std TransformManip</a> tool,</li>
 <li>use the <span typeof="mw:File"><a href="index.php?title=Std_Placement.svg&amp;filetimestamp=20200107104731&amp;.html" class="mw-file-description"><img src="File/Std_Placement.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_Placement.html" title="Std Placement">Std Placement</a> dialog, or</li>
 <li>modify the <a href="Placement.html" title="Placement">placement</a> property directly in the <a href="Property_View.html" title="Property View">property editor</a>.</li></ul>
-<p>You may use one of the pseudo-assembly <a href="External_workbenches.html" title="External workbenches">external workbenches</a>, like <a href="Lattice2_Workbench.html" title="Lattice2 Workbench">Lattice2</a>, <a href="Manipulator_Workbench.html" title="Manipulator Workbench">Manipulator</a>, <a rel="nofollow" class="external text" href="https://github.com/DeepSOIC/Part-o-magic">Part-o-magic</a>, or <a href="Workfeature_Workbench.html" title="Workfeature Workbench">WorkFeature</a>, to help you find intersections, measure distances, and distribute your objects in the desired way.
+<p>You may use one of the pseudo-assembly <a href="External_workbenches.html" title="External workbenches">external workbenches</a>, like <span typeof="mw:File"><a href="index.php?title=Lattice2_workbench_icon.svg&amp;filetimestamp=20160611191139&amp;.html" class="mw-file-description"><img src="File/Lattice2_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Lattice2_Workbench.html" title="Lattice2 Workbench">Lattice2</a>, <span typeof="mw:File"><a href="index.php?title=Manipulator_workbench_icon.svg&amp;filetimestamp=20181001182959&amp;.html" class="mw-file-description"><img src="File/Manipulator_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Manipulator_Workbench.html" title="Manipulator Workbench">Manipulator</a>, <a rel="nofollow" class="external text" href="https://github.com/DeepSOIC/Part-o-magic">Part-o-magic</a>, or <span typeof="mw:File"><a href="index.php?title=Workfeature_workbench_icon.svg&amp;filetimestamp=20200209045750&amp;.html" class="mw-file-description"><img src="File/Workfeature_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Workfeature_Workbench.html" title="Workfeature Workbench">WorkFeature</a>, to help you find intersections, measure distances, and distribute your objects in the desired way.
 </p><p>In general, the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="File/Std_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_Part.html" title="Std Part">Std Part</a></span> object was designed to serve as the basic building block to create assemblies. This object is used to group several <a href="Body.html" title="Body">bodies</a> and move them together as a unit, that is, as a sub-assembly. Then this sub-assembly can be placed next to, or used inside of other sub-assemblies in order to create the final assembly.
 </p>
 <h3><span class="mw-headline" id="Constrained_assembly">Constrained assembly</span></h3>
@@ -99,13 +99,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112062647
+Cached time: 20260112063246
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 421/1000000
+CPU time usage: 0.100 seconds
+Real time usage: 0.107 seconds
+Preprocessor visited node count: 425/1000000
 Post&#8208;expand include size: 28759/2097152 bytes
 Template argument size: 11356/2097152 bytes
 Highest expansion depth: 5/100
@@ -115,17 +115,17 @@ Unstrip post&#8208;expand size: 1579/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.170      1 -total
- 45.77%    6.485      3 Template:Navigation_menu_2
- 41.70%    5.909      1 Template:Std_Base_navi
- 18.22%    2.582      1 Template:Userdocnavi
- 15.47%    2.192      1 Template:Document_objects_navi
-  8.26%    1.170      1 Template:Caption
-  7.10%    1.006      1 Template:TOCright
-  6.39%    0.905      1 Template:Button
+100.00%   14.072      1 -total
+ 44.23%    6.224      3 Template:Navigation_menu_2
+ 43.23%    6.083      1 Template:Std_Base_navi
+ 13.58%    1.911      1 Template:Userdocnavi
+ 11.93%    1.679      1 Template:Caption
+ 11.48%    1.615      1 Template:Document_objects_navi
+  8.17%    1.150      1 Template:Button
+  8.03%    1.130      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178733-0!canonical and timestamp 20260112062713 and revision id 1737228. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178733-0!canonical and timestamp 20260112063309 and revision id 1737229. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
