--- a/wiki/Assembly.html
+++ b/wiki/Assembly.html
@@ -26,7 +26,7 @@
 </p><p>In general, the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="File/Std_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_Part.html" title="Std Part">Std Part</a></span> object was designed to serve as the basic building block to create assemblies. This object is used to group several <a href="Body.html" title="Body">bodies</a> and move them together as a unit, that is, as a sub-assembly. Then this sub-assembly can be placed next to, or used inside of other sub-assemblies in order to create the final assembly.
 </p>
 <h3><span class="mw-headline" id="Constrained_assembly">Constrained assembly</span></h3>
-<p>You can also use the built-in <a href="Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> or its add-on counterparts, like <span typeof="mw:File"><a href="index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="A2plus_Workbench.html" title="A2plus Workbench">A2plus</a>, <span typeof="mw:File"><a href="index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Assembly3_Workbench.html" title="Assembly3 Workbench">Assembly3</a>, or <span typeof="mw:File"><a href="index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Assembly4_Workbench.html" title="Assembly4 Workbench">Assembly4</a>. Please note that <a href="Assembly2_Workbench.html" title="Assembly2 Workbench">Assembly2</a> is unmaintained, so it is not recommended for new models.
+<p>You can also use the built-in <span typeof="mw:File"><a href="index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="File/Workbench_Assembly.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> or its add-on counterparts, like <span typeof="mw:File"><a href="index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="File/A2p_workbench.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="A2plus_Workbench.html" title="A2plus Workbench">A2plus</a>, <span typeof="mw:File"><a href="index.php?title=Assembly3_workbench_icon.svg&amp;filetimestamp=20200910050603&amp;.html" class="mw-file-description"><img src="File/Assembly3_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Assembly3_Workbench.html" title="Assembly3 Workbench">Assembly3</a>, or <span typeof="mw:File"><a href="index.php?title=Assembly4_workbench_icon.svg&amp;filetimestamp=20200209022654&amp;.html" class="mw-file-description"><img src="File/Assembly4_workbench_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Assembly4_Workbench.html" title="Assembly4 Workbench">Assembly4</a>. Please note that <a href="Assembly2_Workbench.html" title="Assembly2 Workbench">Assembly2</a> is unmaintained, so it is not recommended for new models.
 </p><p>The assembly workbenches use constraints and expressions to create relationships between the objects in your model, in order to mathematically tie the objects in place, for example, "this face should stick to this other face", "this cylinder should be concentric to that circle", "this point should follow this edge", etc.
 </p><p>This is an advanced usage of the software that is normally used in complex mechanical systems. If your <a href="Model.html" title="Model">model</a> is not very complex, then using an assembly workbench may not be necessary.
 </p>
@@ -99,13 +99,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112063246
+Cached time: 20260112063715
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.107 seconds
-Preprocessor visited node count: 425/1000000
+CPU time usage: 0.108 seconds
+Real time usage: 0.129 seconds
+Preprocessor visited node count: 426/1000000
 Post&#8208;expand include size: 28759/2097152 bytes
 Template argument size: 11356/2097152 bytes
 Highest expansion depth: 5/100
@@ -115,17 +115,17 @@ Unstrip post&#8208;expand size: 1579/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.072      1 -total
- 44.23%    6.224      3 Template:Navigation_menu_2
- 43.23%    6.083      1 Template:Std_Base_navi
- 13.58%    1.911      1 Template:Userdocnavi
- 11.93%    1.679      1 Template:Caption
- 11.48%    1.615      1 Template:Document_objects_navi
-  8.17%    1.150      1 Template:Button
-  8.03%    1.130      1 Template:TOCright
+100.00%   16.364      1 -total
+ 43.82%    7.171      1 Template:Std_Base_navi
+ 40.89%    6.691      3 Template:Navigation_menu_2
+ 18.68%    3.057      1 Template:Document_objects_navi
+ 12.75%    2.086      1 Template:Userdocnavi
+  8.92%    1.460      1 Template:Caption
+  7.20%    1.179      1 Template:Button
+  5.82%    0.952      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178733-0!canonical and timestamp 20260112063309 and revision id 1737229. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178733-0!canonical and timestamp 20260112063721 and revision id 1737230. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
