--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -269,10 +269,8 @@
 <td>Odstran&iacute; vlastnosti z tvaru
 </td></tr></tbody></table>
 <h3><span class="mw-headline" id="Part_Design">Part Design</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> is an essential tool for creating and modifying solid 3D models. It allows users to design complex parts by sketching 2D profiles and then applying various operations such as extrusions, lofts, and revolutions to generate 3D geometry. This workbench also supports the creation of features like pockets, holes, fillets, and chamfers, providing a comprehensive set of tools for detailed part design. Additionally, the Part Design Workbench integrates seamlessly with the Sketcher Workbench, enabling users to define and constrain sketches that serve as the foundation for 3D models. This integration facilitates a parametric design approach, allowing for easy adjustments and updates to the model throughout the design process.
+<p><span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute; prost&#345;ed&iacute; PartDesign</a> je nezbytn&yacute;m n&aacute;strojem pro vytv&aacute;&#345;en&iacute; a &uacute;pravy pevn&yacute;ch 3D model&#367;. Umo&#382;&#328;uje u&#382;ivatel&#367;m navrhovat slo&#382;it&eacute; d&iacute;ly pomoc&iacute; skicov&aacute;n&iacute; 2D profil&#367; a n&aacute;sledn&eacute;ho pou&#382;it&iacute; r&#367;zn&yacute;ch operac&iacute;, jako jsou extruze, loftov&aacute;n&iacute; a rotace, k vytvo&#345;en&iacute; 3D geometrie. Toto pracovn&iacute; prost&#345;ed&iacute; tak&eacute; podporuje vytv&aacute;&#345;en&iacute; prvk&#367;, jako jsou kapsy, otvory, zaoblen&iacute; a zkosen&iacute; a poskytuje tak komplexn&iacute; sadu n&aacute;stroj&#367; pro detailn&iacute; n&aacute;vrh d&iacute;l&#367;. Krom&#283; toho se Part Design Workbench hladce integruje s Sketcher Workbench, co&#382; u&#382;ivatel&#367;m umo&#382;&#328;uje definovat a omezovat n&aacute;&#269;rtky, kter&eacute; slou&#382;&iacute; jako z&aacute;klad pro 3D modely. Tato integrace usnad&#328;uje parametrick&yacute; p&#345;&iacute;stup k n&aacute;vrhu a umo&#382;&#328;uje snadn&eacute; &uacute;pravy a aktualizace modelu v pr&#367;b&#283;hu cel&eacute;ho procesu n&aacute;vrhu.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable" style="width:100%">
 <tbody><tr>
@@ -1312,13 +1310,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112064359
+Cached time: 20260112064457
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.464 seconds
-Real time usage: 0.548 seconds
-Preprocessor visited node count: 636/1000000
+CPU time usage: 0.486 seconds
+Real time usage: 0.709 seconds
+Preprocessor visited node count: 635/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1328,13 +1326,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.981      1 -total
- 70.90%    6.368      1 Template:Manual:TOC
- 51.15%    4.594      1 Manual:Summary/cs
- 22.19%    1.993      2 Template:Docnav
+100.00%    7.149      1 -total
+ 67.03%    4.792      1 Template:Manual:TOC
+ 50.93%    3.641      1 Manual:Summary/cs
+ 26.16%    1.870      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112064359 and revision id 1737234. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112064456 and revision id 1737236. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
