--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -73,12 +73,10 @@
 <p><span id="Snapping"></span>
 </p>
 <h3><span class="mw-headline" id="Einrasten">Einrasten</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li><b>Ausrichtung der Schnellansicht</b>: Wenn diese Option aktiviert ist, werden Ansichten beim Ziehen ausgerichtet. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
-<li><b>Ansicht-Einrastfaktor</b>: Toleranz f&uuml;r das Einrasten von Ansichten &ndash; wenn eine Ansicht innerhalb dieses Bruchteils der Ansichtsgr&ouml;&szlig;e der perfekten Ausrichtung liegt, rastet sie ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
-<li><b>Raster-Detail-Hervorhebung</b>: Wenn diese Option aktiviert ist, werden die Hervorhebungen in der Detailansicht beim Ziehen in TaskDetail am n&auml;chsten Knoten ausgerichtet. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li>
-<li><b>Hervorhebungs-Raster-Faktor</b>: Fangradius f&uuml;r Markierungen. Der Knoten muss innerhalb dieses Faktors mal der Markierungsgr&ouml;&szlig;e liegen, um ein Fangziel zu sein. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li></ul>
-</div>
+<ul><li><b>Ausrichtung der Ansichten einrasten</b>: Wenn diese Option aktiviert ist, werden Ansichten beim Ziehen ausgerichtet. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
+<li><b>Einrastfaktor f&uuml;r Ansichten</b>: Toleranz f&uuml;r das Einrasten von Ansichten &ndash; wenn eine Ansicht innerhalb dieses Bruchteils der Ansichtsgr&ouml;&szlig;e der perfekten Ausrichtung liegt, rastet sie ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
+<li><b>Einrasten auf Detailansichtsrahmen</b>: Wenn diese Option aktiviert ist, werden die Hervorhebungen in der Detailansicht beim Ziehen in TaskDetail am n&auml;chsten Knoten ausgerichtet. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li>
+<li><b>Einrastfaktor f&uuml;r Ansichtsrahmen</b>: Fangradius f&uuml;r Markierungen. Der Knoten muss innerhalb dieses Faktors mal der Markierungsgr&ouml;&szlig;e liegen, um ein Fangziel zu sein. <span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span></li></ul>
 <p><span id="Scale"></span>
 </p>
 <h3><span class="mw-headline" id="Skalieren">Skalieren</span></h3>
@@ -293,13 +291,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055512
+Cached time: 20260112071102
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.167 seconds
-Preprocessor visited node count: 639/1000000
+CPU time usage: 0.139 seconds
+Real time usage: 0.247 seconds
+Preprocessor visited node count: 638/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
 Highest expansion depth: 5/100
@@ -309,19 +307,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.260      1 -total
- 29.20%    7.377      1 Template:TechDraw_Tools_navi/de
- 16.64%    4.202     33 Template:Version/de
- 14.71%    3.716      2 Template:Docnav/de
- 14.45%    3.649      2 Template:Navigation_menu_2
-  8.87%    2.240      1 Template:Userdocnavi/de
-  5.69%    1.438      2 Template:MenuCommand
-  5.65%    1.426      1 Template:TOCright
-  5.08%    1.283      2 Template:Button
-  4.61%    1.165      1 Template:KEY
+100.00%   63.004      1 -total
+ 20.61%   12.987      1 Template:TechDraw_Tools_navi/de
+ 19.21%   12.105     33 Template:Version/de
+ 18.86%   11.882      2 Template:Docnav/de
+ 11.60%    7.308      2 Template:Navigation_menu_2
+  6.90%    4.347      2 Template:MenuCommand
+  5.25%    3.306      1 Template:TOCright
+  5.02%    3.164      1 Template:KEY
+  4.64%    2.922      1 Template:Userdocnavi/de
+  3.93%    2.474      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112055512 and revision id 1737203. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112071102 and revision id 1737240. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
