--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -84,11 +84,10 @@
 <p><span id="Scale"></span>
 </p>
 <h3><span class="mw-headline" id="Skalieren_2">Skalieren</span></h3>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Blattma&szlig;stab</b>: Standardma&szlig;stab f&uuml;r neue Zeichnungsbl&auml;tter.</li>
 <li><b>Vorgabe des Ansichtsma&szlig;stabs</b>: Standardma&szlig;stab f&uuml;r neue Ansichten.</li>
-<li><b>Benutzerdefinierter Ma&szlig;stab </b>: Standardma&szlig;stab f&uuml;r Ansichten, wenn <b>Vorgabe des Ansichtsma&szlig;stabs</b> <i>Benutzerdefiniert</i> ist.</li></ul>
-</div>
+<li><b>Benutzerdefinierter Ma&szlig;stab </b>: Standardma&szlig;stab f&uuml;r Ansichten, wenn <b>Vorgabe des Ansichtsma&szlig;stabs</b> <i>Benutzerdefiniert</i> ist.</li>
+<li><b>Skalierung von veralteten Symbolen</b>: Verwendet die urspr&uuml;ngliche (falsche) Skalierungsmethode f&uuml;r SVG-Symbole, Tabellenkalkulationsansichten und Entwurfsansichten, wie sie in Version 1.0 und fr&uuml;heren Versionen verwendet wurde. Andernfalls wird eine genauere Methode verwendet.</li></ul>
 <p><span id="Size_Adjustments"></span>
 </p>
 <h3><span id="Gr.C3.B6.C3.9Fenanpassungen"></span><span class="mw-headline" id="Gr&ouml;&szlig;enanpassungen">Gr&ouml;&szlig;enanpassungen</span></h3>
@@ -291,13 +290,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112071102
+Cached time: 20260112071343
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.139 seconds
-Real time usage: 0.247 seconds
-Preprocessor visited node count: 638/1000000
+CPU time usage: 0.107 seconds
+Real time usage: 0.163 seconds
+Preprocessor visited node count: 637/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
 Highest expansion depth: 5/100
@@ -307,19 +306,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.004      1 -total
- 20.61%   12.987      1 Template:TechDraw_Tools_navi/de
- 19.21%   12.105     33 Template:Version/de
- 18.86%   11.882      2 Template:Docnav/de
- 11.60%    7.308      2 Template:Navigation_menu_2
-  6.90%    4.347      2 Template:MenuCommand
-  5.25%    3.306      1 Template:TOCright
-  5.02%    3.164      1 Template:KEY
-  4.64%    2.922      1 Template:Userdocnavi/de
-  3.93%    2.474      2 Template:Button
+100.00%   28.675      1 -total
+ 22.85%    6.551      1 Template:TechDraw_Tools_navi/de
+ 14.06%    4.031      2 Template:Navigation_menu_2
+ 11.74%    3.366      2 Template:MenuCommand
+ 11.53%    3.306      2 Template:Docnav/de
+ 11.49%    3.294     33 Template:Version/de
+ 10.47%    3.002      1 Template:Userdocnavi/de
+ 10.42%    2.987      1 Template:TOCright
+  7.11%    2.038      2 Template:Button
+  5.22%    1.498      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112071102 and revision id 1737240. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112071343 and revision id 1737242. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
