--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -91,12 +91,10 @@
 <p><span id="Size_Adjustments"></span>
 </p>
 <h3><span id="Gr.C3.B6.C3.9Fenanpassungen"></span><span class="mw-headline" id="Gr&ouml;&szlig;enanpassungen">Gr&ouml;&szlig;enanpassungen</span></h3>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Skalierung der Knotenpunkte</b>: Gr&ouml;&szlig;enfaktor der <a href="../de/Glossary.html#V" title="Glossary/de">Vertex</a>-Punkte. Multiplikator der Linienbreite.</li>
 <li><b>Skalierung der Mittelpunktsmarkierungen</b>: Gr&ouml;&szlig;e der Mittelpunktsmarkierungen. Multiplikator der Knotenpunktgr&ouml;&szlig;e.</li>
-<li><b>Markierung f&uuml;r editierbare Vorlagentexte</b>: Gr&ouml;&szlig;e der Klickfelder auf <a href="../de/TechDraw_Templates.html" title="TechDraw Templates/de">Vorlagen</a> in mm (gr&uuml;ne Punkte).</li>
+<li><b>Markierung f&uuml;r bearbeitbare Vorlagentexte</b>: Gr&ouml;&szlig;e der Klickfelder auf <a href="../de/TechDraw_Templates.html" title="TechDraw Templates/de">Vorlagen</a> in mm (gr&uuml;ne Punkte).</li>
 <li><b>Skalierung der Schwei&szlig;symbole</b>: Multiplikator f&uuml;r die Gr&ouml;&szlig;e von <a href="../de/TechDraw_WeldSymbol.html" title="TechDraw WeldSymbol/de">Schwei&szlig;symbolen</a>.</li></ul>
-</div>
 <p><span id="Dimensions"></span>
 </p>
 <h2><span id="Ma.C3.9Feintr.C3.A4ge"></span><span class="mw-headline" id="Ma&szlig;eintr&auml;ge">Ma&szlig;eintr&auml;ge</span></h2>
@@ -290,13 +288,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112071343
+Cached time: 20260112071528
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.163 seconds
-Preprocessor visited node count: 637/1000000
+CPU time usage: 0.121 seconds
+Real time usage: 0.207 seconds
+Preprocessor visited node count: 636/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
 Highest expansion depth: 5/100
@@ -306,19 +304,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.675      1 -total
- 22.85%    6.551      1 Template:TechDraw_Tools_navi/de
- 14.06%    4.031      2 Template:Navigation_menu_2
- 11.74%    3.366      2 Template:MenuCommand
- 11.53%    3.306      2 Template:Docnav/de
- 11.49%    3.294     33 Template:Version/de
- 10.47%    3.002      1 Template:Userdocnavi/de
- 10.42%    2.987      1 Template:TOCright
-  7.11%    2.038      2 Template:Button
-  5.22%    1.498      1 Template:KEY
+100.00%   37.659      1 -total
+ 30.86%   11.620      2 Template:Docnav/de
+ 25.04%    9.431      1 Template:TechDraw_Tools_navi/de
+ 12.78%    4.813      2 Template:Navigation_menu_2
+ 11.51%    4.334     33 Template:Version/de
+  6.47%    2.436      1 Template:Userdocnavi/de
+  4.64%    1.747      1 Template:TOCright
+  4.18%    1.576      2 Template:Button
+  3.85%    1.450      2 Template:MenuCommand
+  3.32%    1.249      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112071343 and revision id 1737242. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112071528 and revision id 1737244. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
