Created page with "[[Image:Workbench_Draft.svg|32px]] [[Draft_Workbench|Pracovní plocha Draft]] je určena pro vytváření a úpravy 2D výkresů. Nabízí řadu nástrojů pro kreslení, včetně čar, oblouků, kruhů a textu. Uživatelé mohou také provádět operace jako ořezávání, prodlužování a odsazování. Draft Workbench je obzvláště užitečný pro architektonické výkresy a lze ho použít k vytváření složitých 2D geometrií, které lze později transformovat..."

--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -444,10 +444,8 @@
 <td>Umo&#382;&#328;uje vytvo&#345;it vzor s libovolnou kombinac&iacute; ostatn&iacute;ch transformac&iacute;
 </td></tr></tbody></table>
 <h3><span class="mw-headline" id="Draft">Draft</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a> is designed for creating and editing 2D drawings. It offers a range of tools for drafting, including lines, arcs, circles, and text. Users can also perform operations like trimming, extending, and offsetting. The Draft Workbench is particularly useful for architectural drawings and can be used to create complex 2D geometries that can be later transformed into 3D models. It integrates seamlessly with other workbenches, providing a versatile foundation for both 2D and 3D design projects.
+<p><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> je ur&#269;ena pro vytv&aacute;&#345;en&iacute; a &uacute;pravy 2D v&yacute;kres&#367;. Nab&iacute;z&iacute; &#345;adu n&aacute;stroj&#367; pro kreslen&iacute;, v&#269;etn&#283; &#269;ar, oblouk&#367;, kruh&#367; a textu. U&#382;ivatel&eacute; mohou tak&eacute; prov&aacute;d&#283;t operace jako o&#345;ez&aacute;v&aacute;n&iacute;, prodlu&#382;ov&aacute;n&iacute; a odsazov&aacute;n&iacute;. Draft Workbench je obzvl&aacute;&scaron;t&#283; u&#382;ite&#269;n&yacute; pro architektonick&eacute; v&yacute;kresy a lze ho pou&#382;&iacute;t k vytv&aacute;&#345;en&iacute; slo&#382;it&yacute;ch 2D geometri&iacute;, kter&eacute; lze pozd&#283;ji transformovat do 3D model&#367;. Dokonale se integruje s ostatn&iacute;mi pracovn&iacute;mi plochami a poskytuje univerz&aacute;ln&iacute; z&aacute;klad pro 2D i 3D n&aacute;vrhov&eacute; projekty
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable" style="width:100%">
 <tbody><tr>
@@ -1306,13 +1304,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112072304
+Cached time: 20260112072424
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.481 seconds
-Real time usage: 0.575 seconds
-Preprocessor visited node count: 633/1000000
+CPU time usage: 0.510 seconds
+Real time usage: 0.777 seconds
+Preprocessor visited node count: 632/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1322,13 +1320,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.942      1 -total
- 75.06%   10.465      1 Template:Manual:TOC
- 49.14%    6.851      1 Manual:Summary/cs
- 20.26%    2.824      2 Template:Docnav
+100.00%    9.727      1 -total
+ 65.53%    6.374      1 Template:Manual:TOC
+ 49.56%    4.821      1 Manual:Summary/cs
+ 28.56%    2.778      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112072304 and revision id 1737248. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112072423 and revision id 1737250. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
