Updated page TechDraw Preferences/de

--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -102,26 +102,24 @@
 <p><span id="Dimensions"></span>
 </p>
 <h3><span id="Ma.C3.9Feintr.C3.A4ge_2"></span><span class="mw-headline" id="Ma&szlig;eintr&auml;ge_2">Ma&szlig;eintr&auml;ge</span></h3>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Normbasis und Ausf&uuml;hrung von Ma&szlig;eintr&auml;gen</b>: Die Norm, die f&uuml;r Ma&szlig;eintr&auml;ge zu verwenden ist. Die Unterschiede zwischen den Normen sind in der Abbildung dargestellt:</li></ul>
 <figure class="mw-halign-center" typeof="mw:File/Thumb"><a href="../index.php?title=TechDraw_Dimension_standardization.png&amp;filetimestamp=20190925170104&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension_standardization.png" decoding="async" width="500" height="354" class="mw-file-element" data-file-width="1123" data-file-height="794"></a><figcaption>Unterschiede zwischen den unterst&uuml;tzten Normen. (<a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=35&amp;t=39571#p336144">Image source</a>)</figcaption></figure>
 <dl><dd><dl><dd><code>ISO ausgerichtet</code> (ISO Oriented) - gezeichnet gem&auml;&szlig; Norm ISO 129-1, Text ist gedreht, um parallel zu der (Tangente an die) Ma&szlig;linie zu sein.</dd>
 <dd><code>ISO mit Hinweislinie</code> (ISO Referencing) - gezeichnet entsprechend der Norm ISO 129-1, Text ist immer horizontal, &uuml;ber der k&uuml;rzest m&ouml;glichen Bezugslinie.</dd>
 <dd><code>ASME eingepasst</code> (ASME Inlined) - gezeichnet gem&auml;&szlig; Norm ASME Y14.5M, Text ist horizontal, eingef&uuml;gt in einer L&uuml;cke der Ma&szlig;linie (bzw. des "Ma&szlig;bogens" bei Winkeln).</dd>
 <dd><code>ASME mit Hinweislinie</code> (ASME Referencing) - gezeichnet entsprechend der Norm ASME Y14.5M, Text ist horizontal, an einer Seite mittig mit einer kurzen, mit der Ma&szlig;linie verbundenen Bezugslinie versehen.</dd></dl></dd></dl>
-<ul><li><b>Globale Dezimalstellen verwenden</b>: Verwendet die Anzahl der Dezimalstellen aus dem <a href="../de/Preferences_Editor.html#Einheiten" title="Preferences Editor/de">Voreinstellungseditor</a>.</li>
+<ul><li><b>Globale Nachkommastellen verwenden</b>: Verwendet die Anzahl der Dezimalstellen aus dem <a href="../de/Preferences_Editor.html#Einheiten" title="Preferences Editor/de">Voreinstellungseditor</a>.</li>
 <li><b>Ma&szlig;einheiten anzeigen</b>: F&uuml;gt die Ma&szlig;einheit (mm, in, etc.) hinter den Ma&szlig;zahlen hinzu.</li>
-<li><b>Dezimalstellen &auml;ndern</b>: Anzahl der Dezimalstellen, wenn <b>Globale Dezimalstellen verwenden</b> nicht ausgew&auml;hlt ist und unter <b>Ma&szlig;zahlenformat</b> nichts angegeben wurde.</li>
+<li><b>Alternative Nachkommastellen</b>: Anzahl der Dezimalstellen, wenn <b>Globale Dezimalstellen verwenden</b> nicht ausgew&auml;hlt ist und unter <b>Ma&szlig;zahlenformat</b> nichts angegeben wurde.</li>
 <li><b>Ma&szlig;zahlenformat</b>: Benutzerdefiniertes Format f&uuml;r Ma&szlig;zahlen (und -Texte). Verwendet die <a rel="nofollow" class="external text" href="https://de.wikipedia.org/wiki/Printf">printf-Formatierung</a>.</li>
-<li><b>Schrifth&ouml;he</b>: Schriftgr&ouml;&szlig;e f&uuml;r Ma&szlig;zahlen und -Texte.</li>
+<li><b>Schriftgr&ouml;&szlig;e</b>: Schriftgr&ouml;&szlig;e f&uuml;r Ma&szlig;zahlen und -Texte.</li>
 <li><b>Skalierung der Toleranzeintr&auml;ge</b>: Schrifth&ouml;henanpassung f&uuml;r Toleranzeintr&auml;ge. Ein Multiplikator der <b>Schrifth&ouml;he</b>.</li>
 <li><b>Durchmessersymbol</b>: Zeichen f&uuml;r die Kennzeichnung von Durchmesserma&szlig;en.</li>
-<li><b>Pfeildarstellung</b>: Art der Ma&szlig;pfeile (Ma&szlig;linienbegrenzungen).</li>
-<li><b>Pfeill&auml;nge</b>: Gr&ouml;&szlig;e der Ma&szlig;pfeile.</li>
+<li><b>Pfeilstil</b>: Art der Ma&szlig;pfeile (Ma&szlig;linienbegrenzungen).</li>
+<li><b>Pfeilgr&ouml;&szlig;e</b>: Gr&ouml;&szlig;e der Ma&szlig;pfeile.</li>
 <li><b>Faktor f&uuml;r Ma&szlig;hilfslinienl&uuml;cken - ISO</b>: L&uuml;cke zwischen Ma&szlig;punkt und Anfang der Ma&szlig;hilfslinie f&uuml;r ISO-Ma&szlig;e. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
 <li><b>Faktor f&uuml;r Ma&szlig;hilfslinienl&uuml;cken - ASME</b>: L&uuml;cke zwischen Ma&szlig;punkt und Anfang der Ma&szlig;hilfslinie f&uuml;r ASME-Ma&szlig;e. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li>
 <li><b>Zeilenabstand - ISO</b>: Abstand zwischen der Ma&szlig;linie und dem Ma&szlig;text f&uuml;r ISO-Ma&szlig;e. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
-</div>
 <p><span id="Tools"></span>
 </p>
 <h3><span class="mw-headline" id="Werkzeuge">Werkzeuge</span></h3>
@@ -288,13 +286,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112071528
+Cached time: 20260112072539
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.207 seconds
-Preprocessor visited node count: 636/1000000
+CPU time usage: 0.113 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 635/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
 Highest expansion depth: 5/100
@@ -304,19 +302,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.659      1 -total
- 30.86%   11.620      2 Template:Docnav/de
- 25.04%    9.431      1 Template:TechDraw_Tools_navi/de
- 12.78%    4.813      2 Template:Navigation_menu_2
- 11.51%    4.334     33 Template:Version/de
-  6.47%    2.436      1 Template:Userdocnavi/de
-  4.64%    1.747      1 Template:TOCright
-  4.18%    1.576      2 Template:Button
-  3.85%    1.450      2 Template:MenuCommand
-  3.32%    1.249      1 Template:KEY
+100.00%   24.546      1 -total
+ 33.25%    8.162      1 Template:TechDraw_Tools_navi/de
+ 17.21%    4.224      2 Template:Navigation_menu_2
+ 13.85%    3.399      2 Template:Docnav/de
+  9.41%    2.311     33 Template:Version/de
+  8.02%    1.968      1 Template:Userdocnavi/de
+  7.32%    1.796      2 Template:Button
+  7.26%    1.783      2 Template:MenuCommand
+  5.98%    1.469      1 Template:TOCright
+  5.41%    1.328      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112071528 and revision id 1737244. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112072539 and revision id 1737252. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
