Updated page TechDraw Preferences/de

--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -246,7 +246,7 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Geometric_dimensioning_and_tolerancing.html" title="TechDraw Geometric dimensioning and tolerancing/de">Geometric dimensioning and tolerancing</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Geometric_dimensioning_and_tolerancing.html" title="TechDraw Geometric dimensioning and tolerancing/de">Form- und Lagetolerierung</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -286,15 +286,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112072714
+Cached time: 20260112072839
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.100 seconds
-Real time usage: 0.143 seconds
+Real time usage: 0.145 seconds
 Preprocessor visited node count: 635/1000000
-Post&#8208;expand include size: 28287/2097152 bytes
-Template argument size: 10623/2097152 bytes
+Post&#8208;expand include size: 28248/2097152 bytes
+Template argument size: 10597/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -302,19 +302,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.792      1 -total
- 23.16%    6.204      1 Template:TechDraw_Tools_navi/de
- 22.20%    5.948      1 Template:Userdocnavi/de
- 13.19%    3.533      2 Template:Navigation_menu_2
-  9.61%    2.575      2 Template:Button
-  8.95%    2.397     33 Template:Version/de
-  8.82%    2.362      2 Template:Docnav/de
-  7.43%    1.991      1 Template:KEY
-  6.34%    1.698      2 Template:MenuCommand
-  5.00%    1.339      1 Template:TOCright
+100.00%   27.571      1 -total
+ 31.48%    8.678      1 Template:TechDraw_Tools_navi/de
+ 14.70%    4.054     33 Template:Version/de
+ 12.37%    3.411      1 Template:TOCright
+ 11.60%    3.199      2 Template:Navigation_menu_2
+ 10.14%    2.796      1 Template:Userdocnavi/de
+  7.91%    2.182      2 Template:Docnav/de
+  5.79%    1.596      1 Template:KEY
+  4.21%    1.160      2 Template:MenuCommand
+  4.14%    1.141      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112072714 and revision id 1737254. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112072839 and revision id 1737256. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
