Created page with "[[Image:Workbench_Sketcher.svg|24px]] [[Sketcher_Workbench|Pracovní plocha Sketcher]] obsahuje nástroje pro vytváření a úpravy složitých 2D objektů, tzv. náčrtů. Geometrii uvnitř těchto náčrtů lze přesně umístit a propojit pomocí omezení. Jsou primárně určeny jako stavební kameny geometrie PartDesign, ale jsou užitečné všude ve FreeCADu."

--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -749,10 +749,8 @@
 </td></tr></tbody></table>
 </div>
 <h3><span class="mw-headline" id="Sketcher">Sketcher</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a> contains tools to build and edit complex 2D objects, called sketches. The geometry inside these sketches can be precisely positioned and related by the use of constraints. They are primarily meant to be the building blocks of PartDesign geometry but are useful everywhere in FreeCAD.
+<p><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plocha Sketcher</a> obsahuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy slo&#382;it&yacute;ch 2D objekt&#367;, tzv. n&aacute;&#269;rt&#367;. Geometrii uvnit&#345; t&#283;chto n&aacute;&#269;rt&#367; lze p&#345;esn&#283; um&iacute;stit a propojit pomoc&iacute; omezen&iacute;. Jsou prim&aacute;rn&#283; ur&#269;eny jako stavebn&iacute; kameny geometrie PartDesign, ale jsou u&#382;ite&#269;n&eacute; v&scaron;ude ve FreeCADu.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable" style="width:100%">
 <tbody><tr>
@@ -1302,13 +1300,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112072900
+Cached time: 20260112073005
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.509 seconds
-Real time usage: 0.627 seconds
-Preprocessor visited node count: 631/1000000
+CPU time usage: 0.463 seconds
+Real time usage: 0.635 seconds
+Preprocessor visited node count: 630/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1318,13 +1316,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.035      1 -total
- 68.81%    8.969      1 Template:Manual:TOC
- 44.00%    5.735      1 Manual:Summary/cs
- 25.96%    3.384      2 Template:Docnav
+100.00%   15.450      1 -total
+ 80.80%   12.483      1 Template:Manual:TOC
+ 67.87%   10.485      1 Manual:Summary/cs
+ 15.18%    2.346      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112072859 and revision id 1737258. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112073004 and revision id 1737260. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
